# google-drive-mcp

./: .env.example  .gitignore  .gitmodules  Dockerfile  Makefile  README.docker.md  README.md  client.py  docker-compose.yml  gdrive_server.py  gdrive_server_fixed.py  install_requirements.sh  make_executable.sh  pyproject.toml  requirements.txt  run.sh  setup.sh  start-docker.sh  update_dependencies.sh
